first completion, needs to be proof read

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
 	<main role="main" class="wrapper" id="wrapper">
 		<section>
-			<div class="header-container">
+			<!-- small screen header -->
+			<div class="header-container-small">
 				<!-- menu button container -->
 				<div class="menu-btn-container">
 					<div class="menu-btn">
@@ -28,6 +29,25 @@
 					</div>
 				</div>
 			</div>
+
+			<!-- expanded screen header -->
+			<div class="header-container-large">
+				<div class="menu-btn-box">
+					<!-- home button link -->
+					<div class="home-box">
+						<h1>Home</h1>
+					</div>
+					<!-- about button link -->
+					<div class="about-box">
+						<h1>About</h1>
+					</div>
+					<!-- story button link -->
+					<div class="story-box">
+						<h1>Story</h1>
+					</div>
+				</div>
+			</div>
+
 		</section>
 
 		<!-- main content -->
@@ -41,7 +61,13 @@
 		</section>
 
 		<!-- footer section -->
-		<section></section>
+		<section>
+			<div class="footer-container">
+				<div class="button-box">
+					<img src="button.png">
+				</div>
+			</div>
+		</section>
 	</main>	
 				
 	</body>
